# emukc

./: .gitattributes  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HTTPS.md  LICENSE-MIT  Makefile  PROJECT_MEMORY.md  README.md  TODO.md  apilist.md  build.rs  emukc.config.example.toml  generate-cert.sh  test_sinking_protection.rs
crates/emukc_app/: Cargo.toml
crates/emukc_app/src/: cst.rs  env.rs  lib.rs  macros.rs  mem.rs
crates/emukc_battle/: Cargo.toml
crates/emukc_battle/src/: config.rs  damage.rs  debug_overlay.rs  event.rs  lib.rs  outcome.rs  random.rs  reducer.rs  state.rs  targeting.rs  test_utils.rs  transcript.rs  transforms.rs  types.rs
crates/emukc_battle/src/simulation/: asw.rs  day_cutin.rs  kouku.rs  mod.rs  night.rs  shelling.rs  special_attack.rs  torpedo.rs
crates/emukc_battle/src/types/: domain.rs  mod.rs  packet.rs  runtime.rs
crates/emukc_battle/tests/: golden_transcript.rs
crates/emukc_battle/tests/golden/: day_seed_01.txt  day_seed_02.txt  day_seed_03.txt  day_seed_04.txt  day_seed_05.txt  day_seed_06.txt  day_seed_07.txt  day_seed_08.txt  day_seed_09.txt  day_seed_10.txt  day_seed_11.txt  day_seed_12.txt  day_seed_13.txt  day_seed_14.txt  day_seed_15.txt  day_seed_16.txt  day_seed_17.txt  day_seed_18.txt  day_seed_19.txt  day_seed_20.txt  night_seed_01.txt  night_seed_02.txt  night_seed_03.txt  night_seed_04.txt  night_seed_05.txt  night_seed_06.txt  night_seed_07.txt  night_seed_08.txt  night_seed_09.txt  night_seed_10.txt  night_seed_11.txt  night_seed_12.txt  night_seed_13.txt  night_seed_14.txt  night_seed_15.txt  night_seed_17.txt  night_seed_18.txt  night_seed_19.txt  night_seed_20.txt
crates/emukc_bin/: Cargo.toml  README.md  build.rs
crates/emukc_bin/assets/html/: maintenance.html
crates/emukc_bin/src/: lib.rs
crates/emukc_bin/src/cfg/: mod.rs
crates/emukc_bin/src/cli/: bootstrap.rs  mod.rs  version.rs
crates/emukc_bin/src/net/: auth.rs  err.rs  header.rs  mod.rs  signal.rs
crates/emukc_bin/src/state/: mod.rs
crates/emukc_bin/tests/config/: test.rs
crates/emukc_bootstrap/: Cargo.toml
crates/emukc_bootstrap/assets/: .sync-fingerprint.json  audio_resources.json  battle_module_index.json  battle_resource_rules.json  battle_slot_resource_triggers.json  cache_rules.json  public_map_catalog_overlays.json  resource_categories.json  resource_id_sets.json  resource_manifest.json  resource_templates.json  ui_resources.json  wikiwiki_map_catalog.json
crates/emukc_bootstrap/assets/real_map_start_data/: map_1-1.json  map_2-1.json  map_2-3.json  map_3-1.json  map_3-2.json  map_3-4.json  map_3-5.json  map_4-1.json  map_4-2.json  map_4-3.json  map_4-5.json  map_5-2.json  map_5-5.json  map_6-3.json  map_6-4.json  map_6-5.json  map_7-1.json  map_7-3-part2.json
crates/emukc_bootstrap/src/: battle_rules.rs  cache.rs  db.rs  download.rs  lib.rs  map_overlay.rs  map_route_rules.rs  populate.rs  progress.rs  real_map_start_asset.rs  res.rs  source_crosscheck.rs  tsunkit_nav_download.rs  wikiwiki_map_asset.rs  wikiwiki_map_download.rs
crates/emukc_bootstrap/src/crawl/: gadget_html5.rs  mod.rs
crates/emukc_bootstrap/src/make_list/: config.rs  errors.rs  holes_report.rs  mod.rs  progress.rs
crates/emukc_bootstrap/src/map_overlay/: capture.rs  matching.rs  merge.rs
crates/emukc_bootstrap/src/map_pipeline/: assemble.rs  kcdata.rs  label_overlay.rs  mod.rs  report.rs  sources.rs  verify.rs
crates/emukc_bootstrap/src/parser/: error.rs  kaisou.rs  kcwiki_slotitems.rs  kcwikizh_kcdata.rs  kcwikizh_ships.rs  mod.rs  music.rs  tsunkit_nav.rs
crates/emukc_bootstrap/src/res/: mod.rs
crates/emukc_cache/: Cargo.toml
crates/emukc_cache/benches/: version_cache_bench.rs
crates/emukc_cache/src/: download_lock.rs  error.rs  export.rs  kache.rs  lib.rs  opt.rs  ver.rs  version_cache.rs
crates/emukc_cache/tests/: basic_operations.rs  cdn_operations.rs  get_options.rs  version_management.rs
crates/emukc_crypto/: Cargo.toml
crates/emukc_crypto/src/: hash.rs  lib.rs  password.rs  rng.rs  suffix_utils.rs
crates/emukc_db/: Cargo.toml
crates/emukc_db/src/: lib.rs  mem.rs
crates/emukc_db/src/entity/: mod.rs
crates/emukc_db/tests/: test.rs  user.rs
crates/emukc_gameplay/: Cargo.toml
crates/emukc_gameplay/src/: CLAUDE.md  err.rs  gameplay.rs  incentive.rs  lib.rs
crates/emukc_gameplay/src/account/: mod.rs
crates/emukc_gameplay/src/game/: CLAUDE.md  basic.rs  expedition.rs  factory.rs  fleet.rs  furniture.rs  incentive.rs  init.rs  kdock.rs  map.rs  map_progress.rs  map_route.rs  material.rs  mod.rs  ndock.rs  pay_item.rs  picturebook.rs  practice.rs  presets.rs  settings.rs  ship.rs  slot_item.rs  sortie.rs  sortie_result.rs  sortie_store.rs  sortie_tests.rs  supply.rs  use_item.rs
crates/emukc_gameplay/src/scenario/: mod.rs
crates/emukc_gameplay/src/user/: CLAUDE.md  account.rs  auth.rs  err.rs  mod.rs  profile.rs
crates/emukc_gameplay/tests/: CLAUDE.md  add_ship.rs  all_in_one.rs  expedition.rs  practice_battle.rs  quest_composition.rs  sim_validation_gate.rs  sortie_battle.rs  user.rs
crates/emukc_internal/: Cargo.toml
crates/emukc_internal/src/: CLAUDE.md  lib.rs  prelude.rs
crates/emukc_log/: Cargo.toml
crates/emukc_log/src/: lib.rs  log.rs
crates/emukc_macros/: Cargo.toml
crates/emukc_macros/src/: lib.rs
crates/emukc_model/: Cargo.toml
crates/emukc_model/src/: lib.rs  user.rs
crates/emukc_model/src/cache/: mod.rs
crates/emukc_model/src/codex/: CLAUDE.md  furniture.rs  game_config.rs  generated_map_catalog.rs  group.rs  incentive.rs  map.rs  mod.rs  query.rs  repair.rs  ship.rs  slot_item.rs  slotitem.rs
crates/emukc_model/src/fields/: mod.rs
crates/emukc_model/src/kc2/: level.rs  mod.rs  navy.rs  remodel.rs  start2.rs  types.rs  world.rs
crates/emukc_model/src/profile/: CLAUDE.md  airbase.rs  dock.rs  expedition.rs  fleet.rs  furniture.rs  kdock.rs  map_record.rs  material.rs  mod.rs  ndock.rs  picture_book.rs  practice.rs  preset_deck.rs  preset_dev_item.rs  preset_slot.rs  (+5 more)
crates/emukc_network/: Cargo.toml
crates/emukc_network/src/: client.rs  download.rs  lib.rs
(+887 files in other folders)
