[package]
name = "emukc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A simple emulator for the web browser game: Kantai Collection"
homepage = "https://github.com/master-g/emukc.git"
repository = "https://github.com/master-g/emukc"
license = "MIT OR Apache-2.0"
keywords = ["emulator", "kancolle"]
exclude = [".github/", "crates/", "z/"]
resolver = "3"

[package.metadata.example.model_loader]
hidden = true

[workspace]
members = ["crates/*"]
exclude = ["benches"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["form"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
headers = "0.4"
axum-macros = { version = "0.5.0" }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base16ct = { version = "1.0.0", features = ["alloc"] }
bcrypt = { version = "0.19.0" }
bs58 = { version = "0.5.1" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
config = { version = "0.15.22", features = ["toml"] }
dashmap = "6.1.0"
enumn = "0.1.14"
env_logger = "0.11.10"
fontdue = { version = "0.9.3" }
futures = { version = "0.3.32" }
futures-util = { version = "0.3.32" }
hmac = { version = "0.13.0" }
http = { version = "1.4.0" }
http-body-util = "0.1.3"
inquire = { version = "0.9.4" }
lru = "0.16.3"
md-5 = "0.11.0"
fastrand = "2"
md5 = "0.8.0"
mime_guess = "2.0.5"
open = "5.3.3"
parking_lot = "0.12"
png = "0.18.1"
redb = "4.0.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
	"default-tls",
	"socks",
	"stream",
] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
sea-orm = { version = "1.1.20", features = [
	"debug-print",
	"runtime-tokio-native-tls",
	"sqlx-sqlite",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
scraper = "0.26.0"
sha2 = { version = "0.11.0", default-features = false }
tera = "1.20.1"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.18" }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
	"add-extension",
	"catch-panic",
	"compression-br",
	"compression-deflate",
	"compression-gzip",
	"compression-zstd",
	"cors",
	"request-id",
	"set-header",
	"trace",
	"util",
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["fast-rng", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
zip = { version = "8.5.0" }

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[[example]]
name = "model_loader"
path = "examples/model_loader.rs"

[[example]]
name = "bootstrap_download"
path = "examples/bootstrap_download.rs"

[[example]]
name = "dump_tree"
path = "examples/dump_tree.rs"

[[example]]
name = "kache_test"
path = "examples/kache_test.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["form"] }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
clap = { workspace = true, features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
config = { workspace = true, features = ["toml"] }
emukc_internal = { path = "crates/emukc_internal" }
env_logger.workspace = true
fontdue = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
inquire = { workspace = true }
mime_guess = { workspace = true }
open = { workspace = true }
png = { workspace = true }
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
	"add-extension",
	"catch-panic",
	"compression-br",
	"compression-deflate",
	"compression-gzip",
	"compression-zstd",
	"cors",
	"request-id",
	"set-header",
	"trace",
	"util",
] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
md5 = "0.8.0"
memory-stats = "1"
regex = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
emukc_dylib = { path = "crates/emukc_dylib", optional = true }

[features]
dynamic_linking = ["dep:emukc_dylib"]

[lints]
workspace = true

# bin
[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
