[package]
name = "emukc_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios"))'.dependencies]
mimalloc = { version = "0.1.43", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
jemallocator = "0.5.4"

[lints]
workspace = true
