[package]
name = "emukc_app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "android"))'.dependencies]
mimalloc = { version = "0.1.43", default-features = false }

[target.'cfg(any(target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
jemallocator = "0.5.4"

[lints]
workspace = true
