[package]
name = "emukc_bin"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
strip = "debuginfo"
lto = true
opt-level = "s"

# build = "build.rs"

[[bin]]
name = "emukcd"

[dependencies]
# emukc
emukc_internal = { path = "../emukc_internal" }

# workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

# only needed for the executable
axum = { version = "0.7.5", features = ["form"] }
axum-server = { version = "0.7.1" }
config = { version = "0.14", features = ["toml"] }
clap = { version = "4", features = ["derive", "env", "wrap_help", "unicode"] }
fontdue = { version = "0.9.2" }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
mime_guess = "2"
png = "0.17.14"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
tera = "1"
tinytemplate = "1"
tower = "0.5"
tower-http = { version = "0.6", features = [
	"add-extension",
	"catch-panic",
	"compression-br",
	"compression-deflate",
	"compression-gzip",
	"compression-zstd",
	"cors",
	"request-id",
	"set-header",
	"trace",
	"util",
] }
url = "2"
urlencoding = "2"
validator = { version = "0.18.1", features = ["derive"] }

[lints]
workspace = true

[[example]]
name = "config_test"
path = "tests/config/test.rs"
doc-scrape-examples = true
