[package]
name = "emukc_bootstrap"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# emukc
emukc_crypto = { path = "../emukc_crypto" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }

# other
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
	"default-tls",
	"socks",
	"stream",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip-extract = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
