[package]
name = "emukc_bootstrap"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# emukc
emukc_cache = { path = "../emukc_cache" }
emukc_crypto = { path = "../emukc_crypto" }
emukc_db = { path = "../emukc_db" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }

# other
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
	"default-tls",
	"socks",
	"stream",
] }
sea-orm = { workspace = true, features = [
	"debug-print",
	"runtime-tokio-native-tls",
	"sqlx-sqlite",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
zip-extract = { workspace = true }

[lints]
workspace = true
