[package]
name = "emukc_bootstrap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# emukc
emukc_cache = { path = "../emukc_cache" }
emukc_crypto = { path = "../emukc_crypto" }
emukc_db = { path = "../emukc_db" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }

# other
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
zip-extract = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
