[package]
name = "emukc_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# emukc
emukc_crypto = { path = "../emukc_crypto", features = ["async"] }
emukc_db = { path = "../emukc_db" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }

# other
rand = { workspace = true, features = ["small_rng"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
