[package]
name = "emukc_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# emukc
emukc_crypto = { path = "../emukc_crypto", features = ["async"] }
emukc_db = { path = "../emukc_db" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }

# other
dashmap.workspace = true
lru.workspace = true
redb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"
tokio-test = "0.4"

[lints]
workspace = true

[[bench]]
name = "version_cache_bench"
harness = false
