[package]
name = "emukc_crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
base16ct = { workspace = true, features = ["alloc"] }
bcrypt = { workspace = true }
bs58 = { workspace = true }
md-5 = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true, default-features = false }
tokio = { workspace = true, optional = true }

[features]
async = ["tokio"]

[lints]
workspace = true
