[package]
name = "emukc_db"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# emukc
emukc_model = { path = "../emukc_model" }

# other
sea-orm = { version = "0.12", features = [
	"debug-print",
	"runtime-tokio-native-tls",
	"sqlx-sqlite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true

[[test]]
name = "test"
