[package]
name = "emukc_db"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# emukc
emukc_model = { path = "../emukc_model" }

# other
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
enumn = { workspace = true }
sea-orm = { workspace = true, features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
