[package]
name = "emukc_gameplay"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# emukc
emukc_crypto = { path = "../emukc_crypto" }
emukc_db = { path = "../emukc_db" }
emukc_model = { path = "../emukc_model" }
emukc_time = { path = "../emukc_time" }

# other
async-trait = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
