[package]
name = "emukc_internal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[dependencies]
emukc_app = { path = "../emukc_app" }
emukc_bootstrap = { path = "../emukc_bootstrap" }
emukc_cache = { path = "../emukc_cache" }
emukc_crypto = { features = ["async"], path = "../emukc_crypto" }
emukc_db = { path = "../emukc_db" }
emukc_gameplay = { path = "../emukc_gameplay" }
emukc_log = { path = "../emukc_log" }
emukc_macros = { path = "../emukc_macros" }
emukc_model = { path = "../emukc_model" }
emukc_network = { path = "../emukc_network" }
emukc_time = { path = "../emukc_time" }

[lints]
workspace = true
