[package]
name = "emukc_log"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
