[package]
name = "emukc_log"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
