[package]
name = "emukc_macros"
version = "0.1.0"
description = "Provides macros for the emukc project"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options"]
all-features = true
