[package]
name = "emukc_macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Provides macros for the emukc project"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options"]
all-features = true

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true
